crates/cribo/tests/snapshots/bundled_code@dunder_package_values.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/dunder_package_values/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('provider.worker', '_cribo_init___cribo_6b5e0d_provider_worker', 'provider_worker', False)
_cribo_finder_local.register('provider', '_cribo_init___cribo_d98eaa_provider', 'provider', True)
_cribo_finder_local.register('toplevel_helper', '_cribo_init___cribo_dd9e25_toplevel_helper', 'toplevel_helper', False)
toplevel_helper = _cribo.types.SimpleNamespace(__name__='toplevel_helper', __initializing__=False, __initialized__=False)
_cribo_finder.bind('toplevel_helper', toplevel_helper)
def _cribo_init___cribo_dd9e25_toplevel_helper(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None
    print("toplevel_helper __package__:", repr(_cribo_self.__package__))
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
toplevel_helper.__init__ = _cribo_init___cribo_dd9e25_toplevel_helper
provider = _cribo.types.SimpleNamespace(__name__='provider', __initializing__=False, __initialized__=False, __path__=[])
_cribo_finder.bind('provider', provider)
def _cribo_init___cribo_d98eaa_provider(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'provider'
    _cribo_self.__doc__ = None
    print("provider package __package__:", _cribo_self.__package__)
    PACKAGE_OF_INIT = _cribo_self.__package__
    _cribo_self.PACKAGE_OF_INIT = PACKAGE_OF_INIT
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
provider.__init__ = _cribo_init___cribo_d98eaa_provider
provider_worker = _cribo.types.SimpleNamespace(__name__='provider.worker', __initializing__=False, __initialized__=False)
_cribo_finder.bind('provider.worker', provider_worker)
def _cribo_init___cribo_6b5e0d_provider_worker(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'provider'
    _cribo_self.__doc__ = None
    print("worker __package__:", _cribo_self.__package__)

    def package_at_call_time():
        return _cribo_self.__package__
    package_at_call_time.__module__ = 'provider.worker'
    package_at_call_time.__qualname__ = 'package_at_call_time'
    _cribo_self.package_at_call_time = package_at_call_time
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
provider_worker.__init__ = _cribo_init___cribo_6b5e0d_provider_worker
provider.worker = provider_worker
"""__package__ observes its real import-system value in bundled modules.\n\nA package initializer sees its own name, a submodule sees its parent, and a\ntop-level module sees the empty string — not the bundle entry's value.\n"""
toplevel_helper = _cribo_init___cribo_dd9e25_toplevel_helper(toplevel_helper)
__cribo_init_result = _cribo_init___cribo_d98eaa_provider(provider)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(provider, attr, getattr(__cribo_init_result, attr))
PACKAGE_OF_INIT = provider.PACKAGE_OF_INIT
__cribo_init_result = _cribo_init___cribo_d98eaa_provider(provider)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(provider, attr, getattr(__cribo_init_result, attr))
provider_worker = _cribo_init___cribo_6b5e0d_provider_worker(provider_worker)
package_at_call_time = provider.worker.package_at_call_time
print("init saw:", PACKAGE_OF_INIT)
print("worker sees:", package_at_call_time())
worker = provider.worker
